2007-11-13  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0001369: Cannot translate (LivingProxy) 
	references on NarrativeWeb dialog

2007-11-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/GraphViz.py: issue #1362, code generation should not show
	open with ghostview, ..., instead show app with text/plain.

2007-11-13 Jim Sack <jgsack@san.rr.com>
	* src/test/regrtest.py: undo removal of module imports in scan-for-tests
	* src/GrampsDbUtils/test/_GrampsDbWRFactories_test.py: minor improve.
	* src/GrampsDbUtils/test/_GedcomChar_test.py: add tests for utf8
	The regrtest had a unwise "optimization" that actually broke the
	..Factories test. A comment was left in place where the un-doing was
	done because it seems like a good thing to document.

2007-11-13 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/TipOfDay.py: Catch exceptions when parsing the tips file.

2007-11-12 Gary Burton <gary.burton@zen.co.uk>
	* src/ScratchPad.py: fixed a crash when building tooltip. Not enough
	place holders in format string

2007-11-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_PersonView.py: translation: Edit object, not menu with action|_Edit
	* src/PageView.py: translation: Edit object, not menu with action|_Edit
	issue #1370

2007-11-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: use import image

2007-11-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/images/gramps-import.png : import image
	* src/gramps_main.py: register import image
	* src/DbLoader.py: Use import not open in import dialog, issue #396

2007-11-11 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_WriteGedcom.py: fix #1364 s/SGLS/SLGS/
	Fixes 3.0 trunk. same issue exists in 2.2.x to be fixed next

2007-11-11 Jim Sack <jgsack@san.rr.com>
	* src/ArgHandler.py: remove leftovers from prior CLI crash (#1358)
	* src/test/gramps_cli_test.py: add test for this bug 