@@ -60,7 +60,7 @@ from ReportBase import ReportUtils
 from Editors import EditPerson, EditFamily 
 from DdTargets import DdTargets
 import cPickle as pickle
-
+import Config
 from QuestionDialog import RunDatabaseRepair, ErrorDialog
 
 #-------------------------------------------------------------------------
@@ -463,10 +463,10 @@ class PedigreeView(PageView.PersonNavView):
         self.dbstate = dbstate
         self.dbstate.connect('database-changed',self.change_db)
         #self.dbstate.connect('active-changed',self.goto_active_person)
-        self.force_size = 0 # Automatic resize
-        self.tree_style = 0 # Nice tree
-        self.show_images = True # Show photos of persons
-        self.show_marriage_data = 0 # Hide marriage data by default
+        self.force_size = Config.get(Config.PEDVIEW_TREESIZE) # Automatic resize
+        self.tree_style = Config.get(Config.PEDVIEW_LAYOUT) # Nice tree
+        self.show_images = Config.get(Config.PEDVIEW_SHOW_IMAGES) # Show photos of persons
+        self.show_marriage_data = Config.get(Config.PEDVIEW_SHOW_MARRIAGE) # Hide marriage data by default
         self.format_helper = FormattingHelper( self.dbstate)
 
     def change_page(self):
@@ -1215,12 +1215,14 @@ class PedigreeView(PageView.PersonNavView):
     
     def change_force_size_cb(self,event,data):
         if data in [0,2,3,4,5]:
+            Config.set(Config.PEDVIEW_TREESIZE,data)
             self.force_size = data
             self.dirty = True
             self.size_request_cb(self.notebook.parent,None) # switch to matching size
 
     def change_tree_style_cb(self,event,data):
         if data in [0,1]:
+            Config.set(Config.PEDVIEW_LAYOUT,data)
             if self.tree_style != data:
                 self.dirty = True
                 self.tree_style = data
@@ -1231,6 +1233,7 @@ class PedigreeView(PageView.PersonNavView):
 
     def change_show_images_cb(self,event):
         self.show_images = not self.show_images
+        Config.set(Config.PEDVIEW_SHOW_IMAGES,self.show_images)
         self.dirty = True
         if self.dbstate.active:
             self.rebuild_trees(self.dbstate.active.handle) # Rebuild using new style
@@ -1239,6 +1242,7 @@ class PedigreeView(PageView.PersonNavView):
 
     def change_show_marriage_cb(self,event):
         self.show_marriage_data = not self.show_marriage_data
+        Config.set(Config.PEDVIEW_SHOW_MARRIAGE,self.show_marriage_data)
         self.dirty = True
         if self.dbstate.active:
             self.rebuild_trees(self.dbstate.active.handle) # Rebuild using new style
